<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="ACTUALIZAR DATOS DE USUARIO"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/user_name"
        android:layout_margin="20dp"
        android:inputType="textEmailAddress"
        android:enabled="false"
        android:id="@+id/EditUser"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/password"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:id="@+id/EditPass"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/register_name"
        android:layout_margin="20dp"
        android:inputType="textPersonName"
        android:id="@+id/editName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/apellido"
        android:layout_margin="20dp"
        android:inputType="textPersonName"
        android:id="@+id/editApellido"/>

    <Button
        android:id="@+id/btnEditRegistrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/actualizar"
        android:layout_margin="25dp"
        android:textColor="@color/blue"
        android:textSize="30dp"
        android:background="@drawable/custom_button"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btnEditCancelar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/cancelar"
        android:layout_margin="25dp"
        android:textColor="@color/blue"
        android:textSize="30dp"
        android:background="@drawable/custom_button"
        android:textStyle="bold"/>



</LinearLayout>

