<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="20dp"
        android:src="@drawable/login" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/user_name"
        android:layout_margin="20dp"
        android:inputType="textEmailAddress"
        android:id="@+id/User"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/password"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:id="@+id/Pass"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/start"
        android:layout_margin="20dp"
        android:textColor="@color/blue"
        android:textSize="30dp"
        android:background="@drawable/custom_button"
        android:textStyle="bold"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/register"
        android:layout_margin="20dp"
        android:textColor="@color/blue"
        android:textSize="30dp"
        android:background="@drawable/custom_button"
        android:textStyle="bold"/>

</LinearLayout>

