<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/agrobotes"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:src="@drawable/splash_barco"/>



    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/btnInicioEditar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/actualizar"
        android:layout_margin="25dp"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:background="@drawable/custom_button"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btnInicioborrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/borrar"
        android:layout_margin="25dp"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:background="@drawable/custom_button"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnInicioListar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/listar"
        android:layout_margin="25dp"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:background="@drawable/custom_button"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btnInicioSalir"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/salir"
        android:layout_margin="25dp"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:background="@drawable/custom_button"
        android:textStyle="bold"/>


</LinearLayout>

